2008-08-16  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in
	(PokerTableTestCase.test28_tooManyPlayers): Wrote test.
	(PokerTableTestCaseTransient.test28_tooManyPlayers): Wrote test.
	(PokerTableTestCase.test29_leavingDoesNotDecreaseCount): Wrote test.
	(PokerTableTestCase.test30_justEnoughPlayers): Wrote test.
	(PokerTableTestCase.test16_autoMuckTimeoutPolicy): Added test on
	bet mismatch output.

	* pokernetwork/pokertable.py (PokerTable.joinPlayer): Added test
	for exceeding of maximum join.  Added joinedCountIncrease() call.
	(PokerTable.destroyPlayer): Added  joinedCountDecrease() call.

	* pokernetwork/pokerpackets.py (PacketPokerTableJoin): Added FULL
	code and documentation on it.

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.test00_configValues): Added tests for
	instance variables that only exist at startService.
	(PokerServiceTestCase.test19_testJoinCounter): Wrote test.

	* pokernetwork/pokerservice.py (PokerService.__init__): renamed
	instance variable from max_joined to joined_max
	(PokerService.joinedCountDecrease): Wrote method.
	(PokerService.joinedCountIncrease): Wrote method.
	(PokerService.joinedCountReachedMax): Wrote method.

	* pokernetwork/pokerservice.py (PokerService.__init__): Added
	max_joined instance variable from the /server/@max_joined setting.

	* tests/test-pokerservice.py.in
	(MonitorTestCase.test00_configValues): Wrote test.

2008-08-16  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* tests/test-pokerservice.py.in: get rid of extra verbosity
	* pokernetwork/pokeravatar.py, pokernetwork/pokersite.py: The role
	  is set when creating the avatar, always. Not just when relogin

2008-08-15  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokersite.py, tests/test-pokersite.py.in: move
	  cookie expiration functions to the Request subclass
	  when an error is caught, the session cookie is expired if found
	* pokernetwork/pokersite.py, tests/test-pokersite.py.in: the